testsuite/tests/parser/should_fail/NoArgumentDoFail.stderr

NoArgumentDoFail.hs:8:17: error:
    Unexpected do block in function application:
        do { return () }
    You could write it with parentheses
    Or perhaps you meant to enable ArgumentDo?
